# 42

./: .gitignore  42.h  42.html  Android.mk  README  makefile  txt.txt
app/: makefile
app/android/: makefile
app/apk/: AndroidManifest.xml  makefile
app/driver.usb@x64.win/: makefile
app/efi+x64+none+fb/: makefile
app/ipa/: makefile
app/none+arm+linux+cli/: makefile
app/none+arm+linux+epoll/: makefile
app/none+arm+linux+fb/: makefile
app/none+arm+linux+text/: makefile
app/none+arm+linux+tui/: makefile
app/none+arm+linux+xlib/: makefile
app/none+mips+linux+cli/: makefile
app/none+none+linux+usbdriver/: Makefile  testusb.c
app/none+x64+linux+cli/: makefile
app/none+x64+linux+epoll/: makefile
app/none+x64+linux+fb/: makefile
app/none+x64+linux+gtk/: makefile
app/none+x64+linux+iocp/: makefile
app/none+x64+linux+ko/: Makefile
app/none+x64+linux+opengl/: makefile
app/none+x64+linux+sdl/: makefile
app/none+x64+linux+text/: makefile
app/none+x64+linux+wayland/: makefile
app/none+x64+linux+xlib/: makefile
app/none+x64+mac+cli/: makefile
app/none+x64+mac+cocoa/: makefile
app/none+x64+mac+kext/: makefile
app/none+x64+mac+kqueue/: makefile
app/none+x64+mac+quartz/: makefile
app/none+x64+mac+sdl/: makefile
app/none+x64+mac+text/: makefile
app/none+x64+win+api/: makefile
app/none+x64+win+cli/: makefile
app/none+x64+win+sdl/: makefile
app/none+x64+win+text/: makefile
app/none+x64+win+tui/: makefile
app/none+x86+linux+cli/: makefile
app/none+x86+linux+fb/: makefile
app/none+x86+linux+sdl/: makefile
app/none+x86+linux+xlib/: makefile
app/none+x86+mac+cli/: makefile
app/none+x86+mac+sdl/: makefile
app/none+x86+win+api/: makefile
app/none+x86+win+cli/: makefile
app/none+x86+win+sdl/: makefile
app/test/: graphical.c  hanzi.c  makefile
compiler/: makefile  readme
compiler/efi/: readme.txt
compiler/linux/: aarch64.txt  linuxtool.txt
compiler/rpi/: makefile
compiler/win/: windowstool.txt
datafile/: 42.xml  mainwindow.ml  makefile  readme  uac.rc  ui.json  ui.xml  weiqi.txt
datafile/cinc/: sram6t.cpcb
datafile/ic/: logic.ic  memory.ic  power.ic
datafile/myic/: decode.ic  logic.ic  memory.ic  power.ic
datafile/mylang/: main.my  main.mylang  someidea.my
datafile/myml/: 3d-2048.myml  3d-freecam.myml  3d-rtsgame.myml  3d-xiangqi.myml  ahrs-easyag-line-uart.myml  ahrs-easyag-line-udp.myml  ahrs-line-udp.myml  ahrs-madgwick-line-uart.myml  ahrs-madgwick-line-udp.myml  ahrs-mahony-line-uart.myml  ahrs-mahony-mpu9250-i2c.myml  ahrs-mahony-mpu9250-spi.myml  brainfull-controller.myml  brainless-controlled.myml  brainless-controller.myml  cam-1rd.myml  cam-3rd.myml  cam-free.myml  cam-orth.myml  cam-vrglass.myml  circuit.myml  exiter.myml  game-weiqi.myml  gps.myml  imu-mpu9250-i2c.myml  index.myml  mainwindow.myml  rtsgame.myml  test-calib3d.myml  test-camera.myml  test-miccam.myml  test-micphone.myml  test-oscillo.myml  vrglass.myml  welcome.back  welcome.myml
datafile/mynn/: mnist.mynn
datafile/save/: rubik.txt  xiangqi.txt
datafile/stl/: dog-lowpoly.stl  skull-lowpoly.stl  spider-lowpoly.stl
datafile/winres/: 42.rc
datafile/wiring/: 1V3R.wire  2V3R.wire  mos-nand.wire  mos-xor.wire  not.wire
datafile/xml/: 42.xml
datafile/xyz/: complex.xyz  spring.xyz
fs/: ext.c  fat.c  hfs.c  makefile  ntfs.c
init/: makefile
init/linux/: beforemain-cli.c  beforemain.c  disk.c  fb.c  init.c  journal.c  world.c  xlib.c
init/linux-cli/: init.c  log.c  win.c
init/soft/: 0.event.c  1.say.c  2.diary.c  3.operator.c  world.c
init/ui/: cli.c  screen.c
init/win/: api.c  commandline.c  disk.c  mem2file.c  process.c
init/win-cli/: init.c
init/win-gui/: api.c  init.c  journal.c
libhard1/: convert.c  makefile
libsoft/: anscii.convert.c  background.c  calc.c  cmpsb.c  convert.c  holyshit.c  makefile  math.c  math.calc.c  math.convert.c  memory.c  printmemory.c
libsoft0/: makefile
libsoft0/linux/: arg.c
libsoft1/: makefile  master.c  math.convert.c  memory.c  readme
libsoft1/anscii/: anscii.convert.c
libsoft1/filesystem/: ext.c  fat.c  hfs.c  ntfs.c
libsoft1/master/: hello.c  master.c
libsoft1/math/: math.c  math.convert.c
libsoft1/net/: mac.c
libsoft1/partitiontable/: gpt.c  mbr.c
libsoft2/: makefile
libsoft2/filesystem/: fat.c  hfs.c
libui/: anscii.c  background.c  draw.c  makefile
libui0/: cli.c  makefile
libui0/linux/: xlib.c
libui0/win/: winapi.c
libui1/: 0-menu.c  1-hex.c  2-real.c  3-jiong.c  anscii.c  background.c  esc.c  f1.c  f2-back.c  f2.c  f3.c  f4.c  makefile
libui1/1234/: 3.sketchpad.c
libui1/menu/: menu.c
libui2/: background.c  f3.c  f4.c  makefile
main/: cli.c  graphic.c  gui.c  makefile  master.c  struct.h
main/apk/: makefile
main/cli/: Android.mk  cli.c  makefile
main/gui/: 0-disk.c  0-menu.c  0-overview.c  0.menu.c  1-console.c  1-hex.c  1-real.c  1.hex.c  2-logic.c  2-real.c  2.2048.c  2.fs.c  2.keyboard.c  2.tree.c  3-d.c  3-hex.c  3-jiong.c  3.sketchpad.c  4-console.c  4.console.c  5-overview.c  console.c  disk.c  gui.c  left.c  logic0.c  makefile  menu.c  middle.c  overview.c  real0.c  right.c  showlogic0.c  showreal0.c
main/test/: graphical.c  hanzi.c  makefile  unicodetable.c  utf.c
main/web/: makefile
main1/: makefile
project/: makefile  readme
project/8051/: makefile
project/android+apk/: makefile
project/android_anative/: AndroidManifest.xml
project/android_cli/: .gitignore
project/android_gles/gradle/app/src/main/cpp/: CMakeLists.txt
project/apk/: makefile
project/assembly.x64linux/: 42.s  makefile
project/assembly.x64linuxgui/: makefile
project/assembly.x64win/: gui.s  makefile
project/assembly.x64wingui/: 42.s  makefile
project/barebioslive+x64+bare+8bit/: makefile
project/barebioslive+x64+bare+cli/: makefile  start.c
project/web/: 42.html
res/: chat.html  makefile
test/: graphical.c  utf.c
wrap/: makefile
wrap1/: annoying.c  anscii.c  background.c  cmpsb.c  holyshit.c  makefile  printmemory.c
wrap2/: ext.c  fat.c  hfs.c  makefile  master.c  ntfs.c  parttable.c  readme  world.h
(+1243 files in other folders)
