#
# Copyright (C) The Android Open Source Project
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

cmake_minimum_required(VERSION 3.4.1)

# build native_app_glue as a static lib
set(${CMAKE_C_FLAGS}, "${CMAKE_C_FLAGS}")
add_library(native_app_glue STATIC
    ${ANDROID_NDK}/sources/android/native_app_glue/android_native_app_glue.c)

# now build app's shared lib
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=gnu++11 -Wno-address-of-packed-member -Wall -Werror")

# Export ANativeActivity_onCreate(),
# Refer to: https://github.com/android-ndk/ndk/issues/381.
set(CMAKE_SHARED_LINKER_FLAGS
    "${CMAKE_SHARED_LINKER_FLAGS} -u ANativeActivity_onCreate")

set(MYDIR "../../../../../../../library")
if(ANDROID_ABI STREQUAL armeabi-v7a)
	set(ANDROID_ABI armeabi-v7a)
elseif(ANDROID_ABI STREQUAL arm64-v8a)
	set(ANDROID_ABI arm64-v8a)
endif()

add_library(native-activity SHARED
${MYDIR}/libboot0/app/ndk/entry.c
${MYDIR}/libboot0/app/ndk/helpenv.c
${MYDIR}/libboot0/app/ndk/helpuart.c
${MYDIR}/libboot1/data/bignode.c
${MYDIR}/libboot1/data/relation.c
${MYDIR}/libboot1/data/linklist.c
${MYDIR}/libboot1/data/rbtree.c
${MYDIR}/libboot1/loop/loop.exiter.c
${MYDIR}/libboot1/loop/loop.poller.c
${MYDIR}/libboot1/loop/loop.pulser.c
${MYDIR}/libboot1/loop/loop.realer.c
${MYDIR}/libboot1/loop/loop.waiter.c
${MYDIR}/libboot1/std/stdev.c
${MYDIR}/libboot1/std/stdin.c
${MYDIR}/libboot1/std/stdout.c
${MYDIR}/libboot1/work/work.compile.c
${MYDIR}/libboot1/work/work.kernel.c
${MYDIR}/libboot1/work/work.myml.c
${MYDIR}/libboot1/work/work.mython.c
${MYDIR}/libboot1/bootup.c
${MYDIR}/libhard1/devmap/acpi/devmap.acpi.c
${MYDIR}/libhard1/devmap/dts/devmap.dts.c
${MYDIR}/libhard1/memmap/memmap.bios.c
${MYDIR}/libhard1/memmap/memmap.uefi.c
${MYDIR}/libhard1/sensor/baro/baro.ms5611.c
${MYDIR}/libhard1/sensor/gyro/gyro.l3gd20.c
${MYDIR}/libhard1/sensor/pack/g_a_b.icm20789.c
${MYDIR}/libhard1/sensor/pack/g_a_m.lsm9ds1.c
${MYDIR}/libhard1/sensor/pack/g_a_m.mpu9250.c
${MYDIR}/libhard1/usb/peri/usbany-driver.c
${MYDIR}/libhard1/usb/peri/usbhub-driver.c
${MYDIR}/libhard1/usb/peri/usbds4-driver.c
${MYDIR}/libhard1/usb/peri/usbxbox-driver.c
${MYDIR}/libhard1/usb/func/usbhid-driver.c
${MYDIR}/libhard1/usb/func/usbstor-driver.c
${MYDIR}/libhard1/driver.c
${MYDIR}/libsoft0/linux/linux.flow.epoll.c
${MYDIR}/libsoft0/linux/linux.flow.socket.c
${MYDIR}/libsoft0/linux/linux.flow.ptmx.c
${MYDIR}/libsoft0/linux/linux.flow.tty.c
${MYDIR}/libsoft0/linux/linux.memory.file.c
${MYDIR}/libsoft0/linux/linux.memory.folder.c
${MYDIR}/libsoft0/linux/linux.multitask.process.c
${MYDIR}/libsoft0/linux/linux.multitask.thread.c
${MYDIR}/libsoft0/linux/linux.system.random.c
${MYDIR}/libsoft0/linux/linux.system.signal.c
${MYDIR}/libsoft0/linux/linux.system.time.c
${MYDIR}/libsoft0/system.c
${MYDIR}/libsoft1/libalgo/liblang/assembly/asm.x64.c
${MYDIR}/libsoft1/libalgo/liblang/assembly/asm.arm.c
${MYDIR}/libsoft1/libalgo/liblang/program/prog.purec.c
${MYDIR}/libsoft1/libalgo/liblang/program/prog.cpp.c
${MYDIR}/libsoft1/libalgo/liblang/lang.c
${MYDIR}/libsoft1/libalgo/libstr/conv/conv.arg.c
${MYDIR}/libsoft1/libalgo/libstr/conv/conv.ascii.c
${MYDIR}/libsoft1/libalgo/libstr/conv/conv.bigint.c
${MYDIR}/libsoft1/libalgo/libstr/conv/conv.file.c
${MYDIR}/libsoft1/libalgo/libstr/conv/conv.num.c
${MYDIR}/libsoft1/libalgo/libstr/conv/conv.print.c
${MYDIR}/libsoft1/libalgo/libstr/conv/conv.url.c
${MYDIR}/libsoft1/libalgo/libstr/conv/conv.utf8.c
${MYDIR}/libsoft1/libalgo/libstr/count/count.item.c
${MYDIR}/libsoft1/libalgo/libstr/count/count.line.c
${MYDIR}/libsoft1/libalgo/libstr/diff/diff.cmp.c
${MYDIR}/libsoft1/libalgo/libstr/diff/diff.wild.c
${MYDIR}/libsoft1/libalgo/libstr/move/move.copy.c
${MYDIR}/libsoft1/libalgo/libstr/move/move.swap.c
${MYDIR}/libsoft1/libalgo/crypt/crypt.aes.c
${MYDIR}/libsoft1/libalgo/crypt/crypt.des.c
${MYDIR}/libsoft1/libalgo/crypt/crypt.rsa.c
${MYDIR}/libsoft1/libalgo/encdec/encdec.base64.c
${MYDIR}/libsoft1/libalgo/encdec/encdec.qrcode.c
${MYDIR}/libsoft1/libalgo/graph/graph.forcedirected.c
${MYDIR}/libsoft1/libalgo/graph/graph.kruskal.c
${MYDIR}/libsoft1/libalgo/graph/graph.prim.c
${MYDIR}/libsoft1/libalgo/hash/hash.crc8.c
${MYDIR}/libsoft1/libalgo/hash/hash.crc16.c
${MYDIR}/libsoft1/libalgo/hash/hash.crc32.c
${MYDIR}/libsoft1/libalgo/hash/hash.md5.c
${MYDIR}/libsoft1/libalgo/hash/hash.sha1.c
${MYDIR}/libsoft1/libalgo/hash/hash.sha256.c
${MYDIR}/libsoft1/libalgo/hash/hash.sha512.c
${MYDIR}/libsoft1/libalgo/hash/hash.string.c
${MYDIR}/libsoft1/libalgo/keyexch/keyexch.dh.c
${MYDIR}/libsoft1/libalgo/keyexch/keyexch.x25519.c
${MYDIR}/libsoft1/libalgo/linear/linear.disjoint.c
${MYDIR}/libsoft1/libalgo/linear/linear.memory.c
${MYDIR}/libsoft1/libalgo/linear/linear.queue.c
${MYDIR}/libsoft1/libalgo/linear/linear.stack.c
${MYDIR}/libsoft1/libalgo/matching/match.bm.c
${MYDIR}/libsoft1/libalgo/matching/match.kmp.c
${MYDIR}/libsoft1/libalgo/matching/match.rough.c
${MYDIR}/libsoft1/libalgo/neural/neural.ann.c
${MYDIR}/libsoft1/libalgo/neural/neural.cnn.c
${MYDIR}/libsoft1/libalgo/neural/neural.rnn.c
${MYDIR}/libsoft1/libalgo/notation/nota.calc.c
${MYDIR}/libsoft1/libalgo/notation/nota.postfix.c
${MYDIR}/libsoft1/libalgo/notation/nota.prefix.c
${MYDIR}/libsoft1/libalgo/solve/solve.2048.c
${MYDIR}/libsoft1/libalgo/solve/solve.chess.c
${MYDIR}/libsoft1/libalgo/solve/solve.maze.c
${MYDIR}/libsoft1/libalgo/solve/solve.pcbwire.c
${MYDIR}/libsoft1/libalgo/solve/solve.rubik.c
${MYDIR}/libsoft1/libalgo/solve/solve.snake.c
${MYDIR}/libsoft1/libalgo/solve/solve.sudoku.c
${MYDIR}/libsoft1/libalgo/solve/solve.tetris.c
${MYDIR}/libsoft1/libalgo/solve/solve.xiangqi.c
${MYDIR}/libsoft1/libalgo/sorting/sort.bubble.c
${MYDIR}/libsoft1/libalgo/sorting/sort.gnome.c
${MYDIR}/libsoft1/libalgo/sorting/sort.heap.c
${MYDIR}/libsoft1/libalgo/sorting/sort.insert.c
${MYDIR}/libsoft1/libalgo/sorting/sort.merge.c
${MYDIR}/libsoft1/libalgo/sorting/sort.quick.c
${MYDIR}/libsoft1/libalgo/sorting/sort.select.c
${MYDIR}/libsoft1/libalgo/transform/trfm.cosine.c
${MYDIR}/libsoft1/libalgo/transform/trfm.fourier.c
${MYDIR}/libsoft1/libalgo/transform/trfm.laplace.c
${MYDIR}/libsoft1/libalgo/tree/tree.binary.c
${MYDIR}/libsoft1/libalgo/tree/tree.redblack.c
${MYDIR}/libsoft1/libalgo/tree/tree.bplus.c
${MYDIR}/libsoft1/libchem/chem.equation.c
${MYDIR}/libsoft1/libfile/audio/audio.ape.c
${MYDIR}/libsoft1/libfile/audio/audio.mp3.c
${MYDIR}/libsoft1/libfile/audio/audio.ogg.c
${MYDIR}/libsoft1/libfile/audio/audio.wav.c
${MYDIR}/libsoft1/libfile/audio/tone.drum.c
${MYDIR}/libsoft1/libfile/audio/tone.flute.c
${MYDIR}/libsoft1/libfile/audio/tone.piano.c
${MYDIR}/libsoft1/libfile/audio/tone.violin.c
${MYDIR}/libsoft1/libfile/certificate/cert.pem.c
${MYDIR}/libsoft1/libfile/certificate/cert.x509.c
${MYDIR}/libsoft1/libfile/compress/comp.7z.c
${MYDIR}/libsoft1/libfile/compress/comp.cpio.c
${MYDIR}/libsoft1/libfile/compress/comp.gz.c
${MYDIR}/libsoft1/libfile/compress/comp.tar.c
${MYDIR}/libsoft1/libfile/compress/comp.zip.c
${MYDIR}/libsoft1/libfile/document/doc.doc.c
${MYDIR}/libsoft1/libfile/document/doc.docx.c
${MYDIR}/libsoft1/libfile/document/doc.latex.c
${MYDIR}/libsoft1/libfile/document/doc.pdf.c
${MYDIR}/libsoft1/libfile/document/doc.ppt.c
${MYDIR}/libsoft1/libfile/document/doc.pptx.c
${MYDIR}/libsoft1/libfile/document/doc.xls.c
${MYDIR}/libsoft1/libfile/document/doc.xlsx.c
${MYDIR}/libsoft1/libfile/electronic/ee.brd.c
${MYDIR}/libsoft1/libfile/electronic/ee.dsn.c
${MYDIR}/libsoft1/libfile/electronic/ee.pcbdoc.c
${MYDIR}/libsoft1/libfile/electronic/ee.schdoc.c
${MYDIR}/libsoft1/libfile/executable/exec.elf.c
${MYDIR}/libsoft1/libfile/executable/exec.macho.c
${MYDIR}/libsoft1/libfile/executable/exec.pe.c
${MYDIR}/libsoft1/libfile/filesystem/fs.ext.c
${MYDIR}/libsoft1/libfile/filesystem/fs.fat.c
${MYDIR}/libsoft1/libfile/filesystem/fs.hfs.c
${MYDIR}/libsoft1/libfile/filesystem/fs.ntfs.c
${MYDIR}/libsoft1/libfile/font/font.fon.c
${MYDIR}/libsoft1/libfile/font/font.otf.c
${MYDIR}/libsoft1/libfile/font/font.ttf.c
${MYDIR}/libsoft1/libfile/model/model.3mf.c
${MYDIR}/libsoft1/libfile/model/model.dwg.c
${MYDIR}/libsoft1/libfile/model/model.stl.c
${MYDIR}/libsoft1/libfile/parttable/pt.apple.c
${MYDIR}/libsoft1/libfile/parttable/pt.gpt.c
${MYDIR}/libsoft1/libfile/parttable/pt.mbr.c
${MYDIR}/libsoft1/libfile/picture/pic.bmp.c
${MYDIR}/libsoft1/libfile/picture/pic.flif.c
${MYDIR}/libsoft1/libfile/picture/pic.heif.c
${MYDIR}/libsoft1/libfile/picture/pic.jpg.c
${MYDIR}/libsoft1/libfile/picture/pic.png.c
${MYDIR}/libsoft1/libfile/picture/pic.webp.c
${MYDIR}/libsoft1/libfile/vdisk/disk.raw.c
${MYDIR}/libsoft1/libfile/vdisk/disk.vhd.c
${MYDIR}/libsoft1/libfile/vdisk/disk.vmdk.c
${MYDIR}/libsoft1/libfile/video/video.avi.c
${MYDIR}/libsoft1/libfile/video/video.gif.c
${MYDIR}/libsoft1/libfile/video/video.mkv.c
${MYDIR}/libsoft1/libfile/video/video.mp4.c
${MYDIR}/libsoft1/libfile/video/video.rmvb.c
${MYDIR}/libsoft1/libfile/filetype.c
${MYDIR}/libsoft1/libfile/fileauto.c
${MYDIR}/libsoft1/libfile/filemgr.c
${MYDIR}/libsoft1/libflow/0.phy/phy.bt.c
${MYDIR}/libsoft1/libflow/0.phy/phy.eth.c
${MYDIR}/libsoft1/libflow/0.phy/phy.raw.c
${MYDIR}/libsoft1/libflow/0.phy/phy.wlan.c
${MYDIR}/libsoft1/libflow/1.link/link.arp.c
${MYDIR}/libsoft1/libflow/1.link/link.ipv4.c
${MYDIR}/libsoft1/libflow/1.link/link.ipv6.c
${MYDIR}/libsoft1/libflow/1.link/link.ipx.c
${MYDIR}/libsoft1/libflow/1.link/link.pppoe.c
${MYDIR}/libsoft1/libflow/1.link/link.slip.c
${MYDIR}/libsoft1/libflow/2.ip/ip46.icmp.c
${MYDIR}/libsoft1/libflow/2.ip/ip46.tcp.c
${MYDIR}/libsoft1/libflow/2.ip/ip46.udp.c
${MYDIR}/libsoft1/libflow/2.ip/ipx.spx.c
${MYDIR}/libsoft1/libflow/3.udp/udp.bootp.c
${MYDIR}/libsoft1/libflow/3.udp/udp.dhcp.c
${MYDIR}/libsoft1/libflow/3.udp/udp.dns.c
${MYDIR}/libsoft1/libflow/3.udp/udp.ntp.c
${MYDIR}/libsoft1/libflow/3.udp/udp.quic.c
${MYDIR}/libsoft1/libflow/3.udp/udp.tftp.c
${MYDIR}/libsoft1/libflow/3.udp/udp.trav.c
${MYDIR}/libsoft1/libflow/4.tcp/tcp.dl.c
${MYDIR}/libsoft1/libflow/4.tcp/tcp.ftp.c
${MYDIR}/libsoft1/libflow/4.tcp/tcp.fuckgfw.c
${MYDIR}/libsoft1/libflow/4.tcp/tcp.http.c
${MYDIR}/libsoft1/libflow/4.tcp/tcp.party.c
${MYDIR}/libsoft1/libflow/4.tcp/tcp.proxy.c
${MYDIR}/libsoft1/libflow/4.tcp/tcp.rdp.c
${MYDIR}/libsoft1/libflow/4.tcp/tcp.rtmp.c
${MYDIR}/libsoft1/libflow/4.tcp/tcp.sql.c
${MYDIR}/libsoft1/libflow/4.tcp/tcp.socks.c
${MYDIR}/libsoft1/libflow/4.tcp/tcp.ssh.c
${MYDIR}/libsoft1/libflow/4.tcp/tcp.telnet.c
${MYDIR}/libsoft1/libflow/4.tcp/tcp.tls1_2.c
${MYDIR}/libsoft1/libflow/4.tcp/tcp.tls1_3.c
${MYDIR}/libsoft1/libflow/4.tcp/tcp.trav.c
${MYDIR}/libsoft1/libflow/4.tcp/tcp.vnc.c
${MYDIR}/libsoft1/libflow/4.tcp/tcp.ws.c
${MYDIR}/libsoft1/libflow/ahrs/ahrs.only_g.c
${MYDIR}/libsoft1/libflow/ahrs/ahrs.only_ga.c
${MYDIR}/libsoft1/libflow/ahrs/ahrs.mahony.c
${MYDIR}/libsoft1/libflow/ahrs/ahrs.madgwick.c
${MYDIR}/libsoft1/libflow/ahrs/ahrs.ekf.c
${MYDIR}/libsoft1/libflow/ahrs/ahrs.ukf.c
${MYDIR}/libsoft1/libflow/file/stream.test.pump.c
${MYDIR}/libsoft1/libflow/file/stream.test.stor.c
${MYDIR}/libsoft1/libflow/html/stream.help.control.c
${MYDIR}/libsoft1/libflow/html/stream.help.crawler.c
${MYDIR}/libsoft1/libflow/html/stream.help.search.c
${MYDIR}/libsoft1/libflow/html/stream.help.vt100.c
${MYDIR}/libsoft1/libflow/image/image.img2pbr.c
${MYDIR}/libsoft1/libflow/image/image.rotate.c
${MYDIR}/libsoft1/libflow/image/image.scale.c
${MYDIR}/libsoft1/libflow/stream/stream.conv.qu2eu.c
${MYDIR}/libsoft1/libflow/stream/stream.conv.str2vec.c
${MYDIR}/libsoft1/libflow/stream/stream.mux.easy.c
${MYDIR}/libsoft1/libflow/stream/stream.mux.media.c
${MYDIR}/libsoft1/libflow/stream/stream.parse.gcode.c
${MYDIR}/libsoft1/libflow/stream/stream.parse.mavlink.c
${MYDIR}/libsoft1/libflow/stream/stream.parse.nema0183.c
${MYDIR}/libsoft1/libflow/stream/stream.revise.recut.c
${MYDIR}/libsoft1/libflow/stream/stream.revise.reline.c
${MYDIR}/libsoft1/libflow/stream/stream.revise.reorder.c
${MYDIR}/libsoft1/libflow/stream/stream.test.echo.c
${MYDIR}/libsoft1/libflow/stream/stream.test.goslow.c
${MYDIR}/libsoft1/libflow/stream/stream.test.dbgf32.c
${MYDIR}/libsoft1/libflow/stream/stream.test.dbghex.c
${MYDIR}/libsoft1/libflow/stream/stream.test.fftpcm.c
${MYDIR}/libsoft1/libflow/stream/stream.test.fftrgb.c
${MYDIR}/libsoft1/libmath/libmath.bigint.c
${MYDIR}/libsoft1/libmath/libmath.matrix.c
${MYDIR}/libsoft1/libmath/libmath.notation.c
${MYDIR}/libsoft1/libmath/libmath.prime.c
${MYDIR}/libsoft1/libmath/libmath.rotation.c
${MYDIR}/libsoft1/libmath/libmath.vector.c
${MYDIR}/libsoft1/libmath/libmath.triangle.c
${MYDIR}/libsoft1/libphys/phys.elec.c
${MYDIR}/libsoft1/libphys/phys.mech.c
${MYDIR}/libsoft1/libphys/phys.rigid.c
${MYDIR}/libsoft1/libphys/phys.fluid.c
${MYDIR}/libsoft1/artery.c
${MYDIR}/libuser0/2d-camera/os-android/android.cam.c
${MYDIR}/libuser0/2d-window/lib-gl/gldraw/gl.none.c
${MYDIR}/libuser0/2d-window/lib-gl/gldraw/gl.easy.c
${MYDIR}/libuser0/2d-window/lib-gl/gldraw/gl.full.c
${MYDIR}/libuser0/2d-window/lib-gl/gltar/gl41.target.color.c
${MYDIR}/libuser0/2d-window/lib-gl/gltar/gl41.target.cube.c
${MYDIR}/libuser0/2d-window/lib-gl/gltar/gl41.target.depth.c
${MYDIR}/libuser0/2d-window/lib-gl/gltar/gl41.target.gbuffer.c
${MYDIR}/libuser0/2d-window/lib-gl/globj/globj.fbo.c
${MYDIR}/libuser0/2d-window/lib-gl/globj/globj.shader.c
${MYDIR}/libuser0/2d-window/lib-gl/globj/globj.texture.c
${MYDIR}/libuser0/2d-window/lib-gl/globj/globj.varray.c
${MYDIR}/libuser0/2d-window/lib-gl/globj/globj.vertex.c
${MYDIR}/libuser0/2d-window/os-android/android.gles.c
${MYDIR}/libuser0/sound-micphone/os-android/android.mic.c
${MYDIR}/libuser0/sound-speaker/os-android/android.speaker.c
${MYDIR}/libuser0/cmdline/android/android.stdio.c
${MYDIR}/libuser0/gamepad/android/android.gamepad.c
${MYDIR}/libuser0/systray/android/android.tray.c
${MYDIR}/libuser0/gadget-sensor/sensor.ahrs.c
${MYDIR}/libuser0/gadget-sensor/sensor.slam.c
${MYDIR}/libuser0/gadget-sensor/sensor.lidar.c
${MYDIR}/libuser0/gadget-sensor/sensor.radar.c
${MYDIR}/libuser0/gadget-display/1602/gadget.1602.c
${MYDIR}/libuser0/gadget-display/12864/gadget.12864.c
${MYDIR}/libuser0/supply.c
${MYDIR}/libuser1/forcpu/3d-carve/carve.point.c
${MYDIR}/libuser1/forcpu/3d-carve/carve.line.c
${MYDIR}/libuser1/forcpu/3d-carve/carve.trigon.c
${MYDIR}/libuser1/forcpu/3d-carve/carve.voxel.c
${MYDIR}/libuser1/forcpu/3d-carve/gl41.opaque.point.c
${MYDIR}/libuser1/forcpu/3d-carve/gl41.opaque.line.c
${MYDIR}/libuser1/forcpu/3d-carve/gl41.opaque.trigon.c
${MYDIR}/libuser1/forcpu/3d-carve/gl41.solid.point.c
${MYDIR}/libuser1/forcpu/3d-carve/gl41.solid.line.c
${MYDIR}/libuser1/forcpu/3d-carve/gl41.solid.trigon.c
${MYDIR}/libuser1/forcpu/3d-carve/gl41.text.ascii.c
${MYDIR}/libuser1/forcpu/3d-carve/gl41.text.unicode.c
${MYDIR}/libuser1/forcpu/3d-carve/gl41.other.circuit.c
${MYDIR}/libuser1/forcpu/3d-carve/gl41.other.group.c
${MYDIR}/libuser1/forcpu/3d-carve/gl41.other.helper.c
${MYDIR}/libuser1/forcpu/2d-draw/tui/tui.c
${MYDIR}/libuser1/forcpu/2d-draw/hsl/hsl.c
${MYDIR}/libuser1/forcpu/2d-draw/yuv/yuv.c
${MYDIR}/libuser1/forcpu/2d-draw/rgba/draw.line.c
${MYDIR}/libuser1/forcpu/2d-draw/rgba/draw.solid.c
${MYDIR}/libuser1/forcpu/2d-draw/rgba/draw.shape.c
${MYDIR}/libuser1/forcpu/2d-draw/rgba/draw.ascii.c
${MYDIR}/libuser1/forcpu/2d-draw/rgba/draw.utf8.c
${MYDIR}/libuser1/forcpu/2d-draw/rgba/draw.vt100.c
${MYDIR}/libuser1/forcpu/2d-draw/rgba/rgba.c
${MYDIR}/libuser1/forcpu/2d-photo/photo.blur.c
${MYDIR}/libuser1/forcpu/2d-photo/photo.channel.c
${MYDIR}/libuser1/forcpu/2d-photo/photo.convert.c
${MYDIR}/libuser1/forcpu/2d-photo/photo.gray.c
${MYDIR}/libuser1/forcpu/2d-photo/photo.mosaic.c
${MYDIR}/libuser1/forcpu/2d-photo/photo.rotate.c
${MYDIR}/libuser1/forcpu/2d-photo/photo.scale.c
${MYDIR}/libuser1/forcpu/3to2-raster/raster.c
${MYDIR}/libuser1/forcpu/3to2-raytrace/raytrace.c
${MYDIR}/libuser1/forcpu/matrix/mat.local2world.c
${MYDIR}/libuser1/forcpu/matrix/mat.world2view.c
${MYDIR}/libuser1/forcpu/matrix/mat.view2clip.c
${MYDIR}/libuser1/forcpu/matrix/mat.clip2ndc.c
${MYDIR}/libuser1/forcpu/matrix/mat.ndc2uv.c
${MYDIR}/libuser1/forcpu/matrix/mat.uv2xy.c
${MYDIR}/libuser1/forcpu/matrix/mat.3d.c
${MYDIR}/libuser1/forcpu/intersect/intersect.obb.c
${MYDIR}/libuser1/forcpu/intersect/intersect.ray.c
${MYDIR}/libuser1/forcpu/intersect/intersect.rect.c
${MYDIR}/libuser1/forcpu/intersect/intersect.sphere.c
${MYDIR}/libuser1/forcpu/forcpu.c
${MYDIR}/libuser1/forgpu/dx11/dx11.ctx.c
${MYDIR}/libuser1/forgpu/gl41/gl41.coop.c
${MYDIR}/libuser1/forgpu/gl41/gl41.data.c
${MYDIR}/libuser1/forgpu/metal/metal.ctx.c
${MYDIR}/libuser1/fornpu/npu.c
${MYDIR}/libuser1/forspu/al10/al10.c
${MYDIR}/libuser1/forspu/sl10/sl10.c
${MYDIR}/libuser1/forspu/spu.pcm.c
${MYDIR}/libuser1/formem/elec/asset.circuit.c
${MYDIR}/libuser1/formem/func/asset.function.c
${MYDIR}/libuser1/formem/html/asset.html.c
${MYDIR}/libuser1/formem/html/html.help.c
${MYDIR}/libuser1/formem/json/json.c
${MYDIR}/libuser1/formem/latex/latex.c
${MYDIR}/libuser1/formem/image/asset.image.c
${MYDIR}/libuser1/formem/model/asset.model.c
${MYDIR}/libuser1/formem/sound/asset.sound.c
${MYDIR}/libuser1/formem/xml/xml.c
${MYDIR}/libuser1/formem/zimu/zimu.c
${MYDIR}/libuser1/formem/formem.c
${MYDIR}/libuser1/forpin/bionic/robot-arm.c
${MYDIR}/libuser1/forpin/bionic/robot-dog.c
${MYDIR}/libuser1/forpin/bionic/robot-man.c
${MYDIR}/libuser1/forpin/bionic/robot-snake.c
${MYDIR}/libuser1/forpin/copter/copter-hexa.c
${MYDIR}/libuser1/forpin/copter/copter-octo.c
${MYDIR}/libuser1/forpin/copter/copter-quad.c
${MYDIR}/libuser1/forpin/factory/3d-printer.c
${MYDIR}/libuser1/forpin/factory/3d-router.c
${MYDIR}/libuser1/forpin/vehicle/car-bldc.c
${MYDIR}/libuser1/forpin/vehicle/car-step.c
${MYDIR}/libuser1/forpin/vehicle/car-toy.c
${MYDIR}/libuser1/therule/gameplay/interact/play.interact.c
${MYDIR}/libuser1/therule/gameplay/mission/play.mission.c
${MYDIR}/libuser1/therule/simulate/collide/collide.simple.c
${MYDIR}/libuser1/therule/simulate/gravity/gravity.easy.c
${MYDIR}/libuser1/therule/simulate/gravity/gravity.test.c
${MYDIR}/libuser1/therule/simulate/biosimu/bio.evolution.c
${MYDIR}/libuser1/therule/simulate/biosimu/bio.multiply.c
${MYDIR}/libuser1/therule/simulate/biosimu/bio.plague.c
${MYDIR}/libuser1/therule/simulate/progsimu/vm.mmio.c
${MYDIR}/libuser1/therule/simulate/progsimu/vm.port.c
${MYDIR}/libuser1/therule/simulate/schesimu/ee.analog.c
${MYDIR}/libuser1/therule/simulate/schesimu/ee.digital.c
${MYDIR}/libuser1/therule/simulate/wiresimu/wiresimu.c
${MYDIR}/libuser1/therule/rule.c
${MYDIR}/libuser1/themind/elec/bldc/control.bldc.c
${MYDIR}/libuser1/themind/elec/bulk/control.bulk.c
${MYDIR}/libuser1/themind/event/evcam/evcam.1rd.c
${MYDIR}/libuser1/themind/event/evcam/evcam.3rd.c
${MYDIR}/libuser1/themind/event/evcam/evcam.free.c
${MYDIR}/libuser1/themind/event/evcam/evcam.frus.c
${MYDIR}/libuser1/themind/event/evcam/evcam.rts.c
${MYDIR}/libuser1/themind/event/evpick/evpick.area.c
${MYDIR}/libuser1/themind/event/evpick/evpick.ray.c
${MYDIR}/libuser1/themind/event/evtouch/evtouch.movecam.c
${MYDIR}/libuser1/themind/event/evtouch/evtouch.moveobj.c
${MYDIR}/libuser1/themind/sense/sense.virtimu.c
${MYDIR}/libuser1/themind/sense/sense.temp.c
${MYDIR}/libuser1/themind/pilot/drone/pilot.drone.c
${MYDIR}/libuser1/themind/pilot/vehicle/pilot.vehicle.c
${MYDIR}/libuser1/themind/pilot/follow/pilot.follow.c
${MYDIR}/libuser1/themind/pilot/lookat/pilot.lookat.c
${MYDIR}/libuser1/themind/pilot/wander/pilot.wander.c
${MYDIR}/libuser1/themind/place/maze/solve.maze.c
${MYDIR}/libuser1/themind/place/rubik/solve.rubik.c
${MYDIR}/libuser1/themind/user/baby/baby.c
${MYDIR}/libuser1/themind/user/gary/gary.c
${MYDIR}/libuser1/themind/user/john/john.c
${MYDIR}/libuser1/themind/user/kali/kali.c
${MYDIR}/libuser1/themind/user/kirk/kirk.c
${MYDIR}/libuser1/themind/user/lara/lara.c
${MYDIR}/libuser1/themind/user/lily/lily.c
${MYDIR}/libuser1/themind/user/musk/musk.c
${MYDIR}/libuser1/themind/user/rose/rose.c
${MYDIR}/libuser1/themind/user/yoda/yoda.c
${MYDIR}/libuser1/themind/mind.c
${MYDIR}/libuser1/theworld/2d/wndtest.naked.c
${MYDIR}/libuser1/theworld/2d/wndtest.titled.c
${MYDIR}/libuser1/theworld/2d/wndtest.edge.c
${MYDIR}/libuser1/theworld/3d/scene.c
${MYDIR}/libuser1/theworld/3d/uiux.axis.c
${MYDIR}/libuser1/theworld/3d/uiux.guide.c
${MYDIR}/libuser1/theworld/3d/uiux.border2d.c
${MYDIR}/libuser1/theworld/3d/uiux.border3d.c
${MYDIR}/libuser1/theworld/chemic/chem.burning.c
${MYDIR}/libuser1/theworld/chemic/chem.corrode.c
${MYDIR}/libuser1/theworld/circuit/circ.src.c
${MYDIR}/libuser1/theworld/circuit/circ.sch.c
${MYDIR}/libuser1/theworld/circuit/circ.pcb.c
${MYDIR}/libuser1/theworld/factory/fac.gcode.c
${MYDIR}/libuser1/theworld/factory/fac.gerber.c
${MYDIR}/libuser1/theworld/physic/phy.field.c
${MYDIR}/libuser1/theworld/physic/phy.fluid.c
${MYDIR}/libuser1/theworld/physic/phy.force.c
${MYDIR}/libuser1/theworld/neural/nn.cnn.c
${MYDIR}/libuser1/theworld/neural/nn.rnn.c
${MYDIR}/libuser1/theworld/capture/cam/cam.free.c
${MYDIR}/libuser1/theworld/capture/cam/cam.ortho.c
${MYDIR}/libuser1/theworld/capture/cam/cam.vrglass.c
${MYDIR}/libuser1/theworld/capture/mic/mic.mono.c
${MYDIR}/libuser1/theworld/capture/mic/mic.stereo.c
${MYDIR}/libuser1/theworld/uispace/ui.html.c
${MYDIR}/libuser1/theworld/uispace/ui.xaml.c
${MYDIR}/libuser1/theworld/whole/reality.c
${MYDIR}/libuser1/theworld/whole/virtual.c
${MYDIR}/libuser1/theworld/world.c
${MYDIR}/libuser1/thething/file/file.model.scad.c
${MYDIR}/libuser1/thething/file/file.model.geometry.c
${MYDIR}/libuser1/thething/file/file.program.mips64.c
${MYDIR}/libuser1/thething/file/file.program.arm64.c
${MYDIR}/libuser1/thething/file/file.program.x86_64.c
${MYDIR}/libuser1/thething/file/file.biology.fasta.c
${MYDIR}/libuser1/thething/file/file.biology.dna.c
${MYDIR}/libuser1/thething/file/file.model.obj.c
${MYDIR}/libuser1/thething/file/file.model.stl.c
${MYDIR}/libuser1/thething/file/file.model.wrl.c
${MYDIR}/libuser1/thething/game/2048/game.2048.c
${MYDIR}/libuser1/thething/game/gobang/game.gobang.c
${MYDIR}/libuser1/thething/game/poker/poker.c
${MYDIR}/libuser1/thething/game/puzzle/game.puzzle.c
${MYDIR}/libuser1/thething/game/tetris/game.tetris.c
${MYDIR}/libuser1/thething/game/krieg/game.krieg.c
${MYDIR}/libuser1/thething/game/weiqi/game.weiqi.c
${MYDIR}/libuser1/thething/game/sudoku/game.sudoku.c
${MYDIR}/libuser1/thething/game/maze/game.maze.c
${MYDIR}/libuser1/thething/game/brick/game.brick.c
${MYDIR}/libuser1/thething/game/mahjong/mahjong.c
${MYDIR}/libuser1/thething/game/rubik/game.rubik.c
${MYDIR}/libuser1/thething/game/chess/game.chess.c
${MYDIR}/libuser1/thething/game/ooxx/game.ooxx.c
${MYDIR}/libuser1/thething/game/pegged/game.pegged.c
${MYDIR}/libuser1/thething/game/xiangqi/game.xiangqi.c
${MYDIR}/libuser1/thething/game/snake/game.snake.c
${MYDIR}/libuser1/thething/game/sokoban/game.sokoban.c
${MYDIR}/libuser1/thething/game/klotski/game.klotski.c
${MYDIR}/libuser1/thething/onlycam/pull/fbo.cbuf.c
${MYDIR}/libuser1/thething/onlycam/pull/fbo.gbuf.c
${MYDIR}/libuser1/thething/onlycam/push/fbo.mirror.c
${MYDIR}/libuser1/thething/onlycam/push/fbo.portal.c
${MYDIR}/libuser1/thething/onlycam/push/fbo.water.c
${MYDIR}/libuser1/thething/onlycam/push/fbo.glass.c
${MYDIR}/libuser1/thething/onlycam/light/light.direction.c
${MYDIR}/libuser1/thething/onlycam/light/light.imagebased.c
${MYDIR}/libuser1/thething/onlycam/light/light.point.c
${MYDIR}/libuser1/thething/onlycam/light/light.projector.c
${MYDIR}/libuser1/thething/onlycam/light/light.spot.c
${MYDIR}/libuser1/thething/reallife/animal/animal.dog.c
${MYDIR}/libuser1/thething/reallife/animal/animal.human.c
${MYDIR}/libuser1/thething/reallife/animal/animal.spider.c
${MYDIR}/libuser1/thething/reallife/funland/item.ferris.c
${MYDIR}/libuser1/thething/reallife/funland/item.roller.c
${MYDIR}/libuser1/thething/reallife/galaxy/item.planet.c
${MYDIR}/libuser1/thething/reallife/galaxy/item.satellite.c
${MYDIR}/libuser1/thething/reallife/gear/gear.hypoid.c
${MYDIR}/libuser1/thething/reallife/gear/gear.worm.c
${MYDIR}/libuser1/thething/reallife/gear/gear.helical.c
${MYDIR}/libuser1/thething/reallife/gear/gear.spur.c
${MYDIR}/libuser1/thething/reallife/gear/gear.bevel.c
${MYDIR}/libuser1/thething/reallife/home/real.screen.c
${MYDIR}/libuser1/thething/reallife/home/item.piano.c
${MYDIR}/libuser1/thething/reallife/home/dxgl.curtain.c
${MYDIR}/libuser1/thething/reallife/home/item.clock.c
${MYDIR}/libuser1/thething/reallife/home/item.house.c
${MYDIR}/libuser1/thething/reallife/home/real.speaker.c
${MYDIR}/libuser1/thething/reallife/mechan/item.spring.c
${MYDIR}/libuser1/thething/reallife/mechan/item.motor.c
${MYDIR}/libuser1/thething/reallife/mechan/item.stick.c
${MYDIR}/libuser1/thething/reallife/move/move.ladder.c
${MYDIR}/libuser1/thething/reallife/move/move.stair.c
${MYDIR}/libuser1/thething/reallife/move/move.elevator.c
${MYDIR}/libuser1/thething/reallife/move/move.telpher.c
${MYDIR}/libuser1/thething/reallife/organ/real.theeye.c
${MYDIR}/libuser1/thething/reallife/organ/real.theear.c
${MYDIR}/libuser1/thething/reallife/plant/item.tree.c
${MYDIR}/libuser1/thething/reallife/plant/item.grass.c
${MYDIR}/libuser1/thething/reallife/plant/item.flower.c
${MYDIR}/libuser1/thething/reallife/reducer/redu.harmonic.c
${MYDIR}/libuser1/thething/reallife/reducer/redu.cycloid.c
${MYDIR}/libuser1/thething/reallife/reducer/redu.planetary.c
${MYDIR}/libuser1/thething/reallife/robot/robo.dancemat.c
${MYDIR}/libuser1/thething/reallife/robot/robo.otto.c
${MYDIR}/libuser1/thething/reallife/robot/robo.balance.c
${MYDIR}/libuser1/thething/reallife/robot/robo.rccar.c
${MYDIR}/libuser1/thething/reallife/robot/robo.drone.c
${MYDIR}/libuser1/thething/subject/elec/analog/dcdc/dcdc.bulk.c
${MYDIR}/libuser1/thething/subject/elec/analog/dcdc/dcdc.boost.c
${MYDIR}/libuser1/thething/subject/elec/analog/radio/radio.am.c
${MYDIR}/libuser1/thething/subject/elec/analog/radio/radio.fm.c
${MYDIR}/libuser1/thething/subject/elec/analog/acdc/acdc.rectifier.c
${MYDIR}/libuser1/thething/subject/elec/analog/energy/energy.battery.c
${MYDIR}/libuser1/thething/subject/elec/analog/energy/energy.current.c
${MYDIR}/libuser1/thething/subject/elec/analog/energy/energy.voltage.c
${MYDIR}/libuser1/thething/subject/elec/analog/dcac/acdc.hbridge.c
${MYDIR}/libuser1/thething/subject/elec/analog/acac/acac.transform.c
${MYDIR}/libuser1/thething/subject/elec/semi/transis/chip.transistor.mosfet.c
${MYDIR}/libuser1/thething/subject/elec/semi/transis/chip.transistor.finfet.c
${MYDIR}/libuser1/thething/subject/elec/semi/transis/chip.transistor.bjt.c
${MYDIR}/libuser1/thething/subject/elec/semi/transis/chip.transistor.gaafet.c
${MYDIR}/libuser1/thething/subject/elec/semi/diode/chip.diode.zener.c
${MYDIR}/libuser1/thething/subject/elec/semi/diode/chip.diode.emitting.c
${MYDIR}/libuser1/thething/subject/elec/semi/diode/chip.diode.schottky.c
${MYDIR}/libuser1/thething/subject/elec/common/common.inductor.c
${MYDIR}/libuser1/thething/subject/elec/common/common.memristor.c
${MYDIR}/libuser1/thething/subject/elec/common/common.capacitor.c
${MYDIR}/libuser1/thething/subject/elec/common/common.resistor.c
${MYDIR}/libuser1/thething/subject/elec/cmos/stor-ff/chip.flipflop.tff.c
${MYDIR}/libuser1/thething/subject/elec/cmos/stor-ff/chip.flipflop.jkff.c
${MYDIR}/libuser1/thething/subject/elec/cmos/stor-ff/chip.flipflop.dff.c
${MYDIR}/libuser1/thething/subject/elec/cmos/oper-add/chip.adder.half.c
${MYDIR}/libuser1/thething/subject/elec/cmos/oper-add/chip.adder.full.c
${MYDIR}/libuser1/thething/subject/elec/cmos/gate-trans/chip.tran.tristate.c
${MYDIR}/libuser1/thething/subject/elec/cmos/gate-trans/chip.tran.tg.c
${MYDIR}/libuser1/thething/subject/elec/cmos/gate-trans/chip.tran.mux.c
${MYDIR}/libuser1/thething/subject/elec/cmos/stor-ram/chip.ram.static.c
${MYDIR}/libuser1/thething/subject/elec/cmos/stor-ram/chip.ram.feedback.c
${MYDIR}/libuser1/thething/subject/elec/cmos/stor-ram/chip.ram.dynamic.c
${MYDIR}/libuser1/thething/subject/elec/cmos/chip.fet.pmos.c
${MYDIR}/libuser1/thething/subject/elec/cmos/gate-logic/chip.logic.not.c
${MYDIR}/libuser1/thething/subject/elec/cmos/gate-logic/chip.logic.and.c
${MYDIR}/libuser1/thething/subject/elec/cmos/gate-logic/chip.logic.xor.c
${MYDIR}/libuser1/thething/subject/elec/cmos/gate-logic/chip.logic.nor.c
${MYDIR}/libuser1/thething/subject/elec/cmos/gate-logic/chip.logic.nand.c
${MYDIR}/libuser1/thething/subject/elec/cmos/gate-logic/chip.logic.or.c
${MYDIR}/libuser1/thething/subject/elec/cmos/gate-logic/chip.logic.xnor.c
${MYDIR}/libuser1/thething/subject/elec/cmos/gate-logic/chip.logic.autocmos.c
${MYDIR}/libuser1/thething/subject/elec/cmos/chip.fet.nmos.c
${MYDIR}/libuser1/thething/subject/topo/item.klein.c
${MYDIR}/libuser1/thething/subject/topo/item.mobius.c
${MYDIR}/libuser1/thething/subject/algo/algo.bintree.c
${MYDIR}/libuser1/thething/subject/algo/algo.algo.c
${MYDIR}/libuser1/thething/subject/algo/algo.mnist.c
${MYDIR}/libuser1/thething/subject/algo/algo.link.c
${MYDIR}/libuser1/thething/subject/algo/algo.sort.c
${MYDIR}/libuser1/thething/subject/algo/algo.graph.c
${MYDIR}/libuser1/thething/subject/algo/algo.bplus.c
${MYDIR}/libuser1/thething/subject/code/code.call.c
${MYDIR}/libuser1/thething/subject/code/code.for.c
${MYDIR}/libuser1/thething/subject/code/code.if.c
${MYDIR}/libuser1/thething/subject/code/code.jump.c
${MYDIR}/libuser1/thething/subject/html/html.audio.c
${MYDIR}/libuser1/thething/subject/html/html.p.c
${MYDIR}/libuser1/thething/subject/html/html.button.c
${MYDIR}/libuser1/thething/subject/html/html.ul.c
${MYDIR}/libuser1/thething/subject/html/html.img.c
${MYDIR}/libuser1/thething/subject/html/html.a.c
${MYDIR}/libuser1/thething/subject/html/html.canvas.c
${MYDIR}/libuser1/thething/subject/html/html.div.c
${MYDIR}/libuser1/thething/subject/html/html.script.c
${MYDIR}/libuser1/thething/subject/html/html.video.c
${MYDIR}/libuser1/thething/subject/math/math.muldiv.c
${MYDIR}/libuser1/thething/subject/math/math.exponent.c
${MYDIR}/libuser1/thething/subject/math/math.vector.c
${MYDIR}/libuser1/thething/subject/math/math.integral.c
${MYDIR}/libuser1/thething/subject/math/math.matrix.c
${MYDIR}/libuser1/thething/subject/math/math.differential.c
${MYDIR}/libuser1/thething/subject/math/math.sincos.c
${MYDIR}/libuser1/thething/subject/math/math.addsub.c
${MYDIR}/libuser1/thething/subject/phys/phys.hydrogen.c
${MYDIR}/libuser1/thething/subject/phys/phys.carbon.c
${MYDIR}/libuser1/thething/subject/phys/phys.oxygen.c
${MYDIR}/libuser1/thething/subject/chem/chem.graphene.c
${MYDIR}/libuser1/thething/subject/chem/chem.h2o.c
${MYDIR}/libuser1/thething/subject/chem/chem.ch4.c
${MYDIR}/libuser1/thething/subject/chem/chem.diamond.c
${MYDIR}/libuser1/thething/uiuxitem/bar/bar.skill.c
${MYDIR}/libuser1/thething/uiuxitem/bar/bar.health.c
${MYDIR}/libuser1/thething/uiuxitem/bar/bar.tag.c
${MYDIR}/libuser1/thething/uiuxitem/bar/bar.tab.c
${MYDIR}/libuser1/thething/uiuxitem/bar/bar.nav.c
${MYDIR}/libuser1/thething/uiuxitem/bar/bar.list.c
${MYDIR}/libuser1/thething/uiuxitem/debug/uiux.layouter.c
${MYDIR}/libuser1/thething/uiuxitem/debug/uiux.cameraer.c
${MYDIR}/libuser1/thething/uiuxitem/debug/uiux.pointer.c
${MYDIR}/libuser1/thething/uiuxitem/editor/edit.hex.c
${MYDIR}/libuser1/thething/uiuxitem/editor/edit.mmio.c
${MYDIR}/libuser1/thething/uiuxitem/editor/edit.text.c
${MYDIR}/libuser1/thething/uiuxitem/editor/edit.code.c
${MYDIR}/libuser1/thething/uiuxitem/menu/menu.login.c
${MYDIR}/libuser1/thething/uiuxitem/menu/menu.confirm.c
${MYDIR}/libuser1/thething/uiuxitem/menu/menu.esc.c
${MYDIR}/libuser1/thething/uiuxitem/menu/menu.start.c
${MYDIR}/libuser1/thething/uiuxitem/rtsui/rtsui.minimap.c
${MYDIR}/libuser1/thething/uiuxitem/rtsui/rtsui.status.c
${MYDIR}/libuser1/thething/uiuxitem/rtsui/rtsui.skill.c
${MYDIR}/libuser1/thething/uiuxitem/table/tab.karnaugh.c
${MYDIR}/libuser1/thething/uiuxitem/table/tab.truth.c
${MYDIR}/libuser1/thething/uiuxitem/widget/uiux.picture.c
${MYDIR}/libuser1/thething/uiuxitem/widget/vkbd.button.c
${MYDIR}/libuser1/thething/uiuxitem/widget/uiux.qrcode.c
${MYDIR}/libuser1/thething/uiuxitem/widget/vkbd.slider.c
${MYDIR}/libuser1/thething/uiuxitem/widget/vkbd.joystick.c
${MYDIR}/libuser1/thething/uiuxitem/widget/vkbd.keyboard.c
${MYDIR}/libuser1/thething/virtimag/dxgl/dxgl.texball.c
${MYDIR}/libuser1/thething/virtimag/dxgl/dxgl.skydome.c
${MYDIR}/libuser1/thething/virtimag/dxgl/dxgl.texbox.c
${MYDIR}/libuser1/thething/virtimag/dxgl/dxgl.weather.c
${MYDIR}/libuser1/thething/virtimag/dxgl/dxgl.ground.c
${MYDIR}/libuser1/thething/virtimag/dxgl/dxgl.terrain.c
${MYDIR}/libuser1/thething/virtimag/dxgl/dxgl.field.c
${MYDIR}/libuser1/thething/virtimag/dxgl/dxgl.particle.c
${MYDIR}/libuser1/thething/virtimag/test/test.palette.c
${MYDIR}/libuser1/thething/virtimag/test/test.codeimg.c
${MYDIR}/libuser1/thething/virtimag/test/test.example.c
${MYDIR}/libuser1/thething/virtimag/test/test.font.c
${MYDIR}/libuser1/thething/virtimag/test/test.fractal.c
${MYDIR}/libuser1/thething/virtimag/test/test.doodle.c
${MYDIR}/libuser1/thething/virtimag/test/test.c
${MYDIR}/libuser1/thething/virtimag/test/test.calib3d.c
${MYDIR}/libuser1/thething/virtimag/term/tool.terminal.c
${MYDIR}/libuser1/thething/virtimag/term/tool.terminal.helper.c
${MYDIR}/libuser1/thething/virtimag/tool/tool.calculator.c
${MYDIR}/libuser1/thething/virtimag/tool/tool.browser.c
${MYDIR}/libuser1/thething/virtimag/tool/menu.detail.c
${MYDIR}/libuser1/thething/virtimag/tool/tool.sketchpad.c
${MYDIR}/libuser1/thething/virtimag/tool/uiux.voxel.c
${MYDIR}/libuser1/thething/virtimag/tool/uiux.texmix.c
${MYDIR}/libuser1/thething/virtimag/tool/tool.pwmtool.c
${MYDIR}/libuser1/thething/virtimag/tool/uiux.spectrum.c
${MYDIR}/libuser1/thething/virtimag/tool/tool.filesystem.c
${MYDIR}/libuser1/thething/virtimag/tool/uiux.video.c
${MYDIR}/libuser1/thething/virtimag/tool/menu.overview.c
${MYDIR}/libuser1/thething/virtimag/tool/tool.wireshark.c
${MYDIR}/libuser1/thething/virtimag/tool/uiux.oscillo.c
${MYDIR}/libuser1/thething/virtimag/vmhw/ram/vmhw.sram.c
${MYDIR}/libuser1/thething/virtimag/vmhw/ram/vmhw.dram.c
${MYDIR}/libuser1/thething/virtimag/vmhw/cpu/vmhw.cpu.x8664.c
${MYDIR}/libuser1/thething/virtimag/vmhw/cpu/vmhw.cpu.arm64.c
${MYDIR}/libuser1/thething/virtimag/vmhw/rpi/vmhw.rpi.uart.c
${MYDIR}/libuser1/thething/virtimag/vmhw/rpi/vmhw.rpi.gpio.c
${MYDIR}/libuser1/thething/virtimag/vmhw/vmhw.gpu.c
${MYDIR}/libuser1/thething/virtimag/item.tardis.c
${MYDIR}/libuser1/thething/virtimag/item.mario.c
${MYDIR}/libuser1/thething/thing.c
${MYDIR}/libuser1/entity.c
)

target_include_directories(native-activity PRIVATE
${ANDROID_NDK}/sources/android/native_app_glue
${MYDIR}
)

# add lib dependencies
target_link_libraries(native-activity
    android
    native_app_glue
    EGL
    GLESv3
    log)
